move to jdk 11 and add build stage for backend application